# Comfyui-xbhh-main

./: LIVE2D_GUIDE.md  README.md  __init__.py  dynamic_text.py  empty_latent.py  layered_note.py  lora_loader.py  lora_loader_plus.py  note_node.py  preset_selector.py  pyproject.toml  requirements.txt  txt_randomizer.py  xbhh_txt_selector.py  xlsx_viewer.py
.github/workflows/: publish.yml
pet/: __init__.py  live2d_api.py  save_image_cui.py  wallet.py
test/: debug.html  waifu-tips.js.base64  waifu-tips.json.base64  waifu.css.base64
test/1/: demo copy.html  demo.html
web/js/: dynamicText.js  emptyLatent.js  layeredNote.js  loraCombo.js  loraComboPlus.js  noteNode.js
web/js/pet/: config_live2d.json  cuiReward.js  live2d_loader.js  live2d_pet.js  live2d_v2_pet.js  waifu-tips.json
web/lib/live2d/: waifu-tips.js  waifu.css
web/live2d/zyby/: 真夜白音.model3.json
参考/: test-head-tracking.html
